[gd_scene load_steps=7 format=3 uid="uid://4dq358ewkgdq"]

[ext_resource type="Script" uid="uid://dxgmsdglfank5" path="res://scenes/pause_screen.gd" id="1_duq8p"]
[ext_resource type="AudioStream" uid="uid://b5666hqp5air6" path="res://sound/ui_slide.mp3" id="2_k26m1"]
[ext_resource type="PackedScene" uid="uid://b5alugxtb238t" path="res://gui/menu_button.tscn" id="3_o31j6"]
[ext_resource type="PackedScene" uid="uid://byvmmq1h54blk" path="res://load_screen/load_screen.tscn" id="4_213y4"]
[ext_resource type="PackedScene" uid="uid://lt8rsgd8fj0v" path="res://settings/settings_screen.tscn" id="5_lubob"]
[ext_resource type="PackedScene" uid="uid://bqa8cxvsy46mm" path="res://history_screen/history_screen.tscn" id="6_k26m1"]

[node name="PauseScreen" type="CanvasLayer"]
layer = 50
script = ExtResource("1_duq8p")

[node name="AudioSlide" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_k26m1")
bus = &"SFX"

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Buttons" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -468.0
offset_right = 390.0
offset_bottom = 346.0
grow_vertical = 2
theme_override_constants/separation = 50
metadata/_edit_group_ = true

[node name="Continue" parent="Panel/Buttons" instance=ExtResource("3_o31j6")]
layout_mode = 2
text = "Продовжити"
font_size = 40

[node name="History" parent="Panel/Buttons" instance=ExtResource("3_o31j6")]
layout_mode = 2
text = "Історія"
font_size = 40

[node name="Save" parent="Panel/Buttons" instance=ExtResource("3_o31j6")]
layout_mode = 2
text = "Зберегти"
font_size = 40

[node name="Load" parent="Panel/Buttons" instance=ExtResource("3_o31j6")]
layout_mode = 2
text = "Завантажити"
font_size = 40

[node name="Settings" parent="Panel/Buttons" instance=ExtResource("3_o31j6")]
layout_mode = 2
text = "Налаштування"
font_size = 40

[node name="MainMenu" parent="Panel/Buttons" instance=ExtResource("3_o31j6")]
layout_mode = 2
text = "Головне меню"
font_size = 40

[node name="LoadScreen" parent="Panel" instance=ExtResource("4_213y4")]
visible = false
layout_mode = 1

[node name="SettingsScreen" parent="Panel" instance=ExtResource("5_lubob")]
visible = false
layout_mode = 1

[node name="HistoryScreen" parent="Panel" instance=ExtResource("6_k26m1")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Panel/Buttons/Continue" to="." method="close"]
[connection signal="pressed" from="Panel/Buttons/History" to="." method="_on_history_pressed"]
[connection signal="pressed" from="Panel/Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/Buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Panel/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/Buttons/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="back_pressed" from="Panel/LoadScreen" to="." method="_on_load_screen_back_pressed"]
[connection signal="loaded_file" from="Panel/LoadScreen" to="." method="_on_load_screen_loaded_file"]
[connection signal="back_pressed" from="Panel/SettingsScreen" to="." method="_on_settings_screen_back_pressed"]
[connection signal="back_pressed" from="Panel/HistoryScreen" to="." method="_on_history_screen_back_pressed"]
